PMO-729: Jar script can now handle multiple main classes